force-app/main/default/objects/Contact/fields/Contact_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Type__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>Contact Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>