force-app/main/default/objects/Contact/fields/DS_Team_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>DS_Team_Approval_Status__c</fullName>
    <label>DS Team Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>