force-app/main/default/objects/Contact/fields/Other_Passions__c.field-meta.xml
<CustomField>
    <fullName>Other_Passions__c</fullName>
    <label>Other Passions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>