force-app/main/default/objects/Contact/recordTypes/LawFirmContacts.recordType-meta.xml
<RecordType>
    <fullName>LawFirmContacts</fullName>
    <active>true</active>
    <label>Law Firm Contacts</label>
</RecordType>