force-app/main/default/objects/Contact/validationRules/Change_Contact_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Contact_Name</fullName>
    <active>true</active>
    <description>Only Admin can change contact name</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISCHANGED(LastName) || ISCHANGED(FirstName))</errorConditionFormula>
    <errorMessage>Contact Name can only be changed by System Administrator</errorMessage>
</ValidationRule>