force-app/main/default/objects/Contact/validationRules/Other_Passions_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Passions_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(  Contact_Interest__c  , &apos;Others&apos;) , ISBLANK( Other_Passions__c ) )</errorConditionFormula>
    <errorDisplayField>Other_Passions__c</errorDisplayField>
    <errorMessage>Please Enter Other Passions</errorMessage>
</ValidationRule>