force-app/main/default/objects/Contact/validationRules/TypeOfAssociation_Must_If_Chamber_Contct.validationRule-meta.xml
<ValidationRule>
    <fullName>TypeOfAssociation_Must_If_Chamber_Contct</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &apos;Chamber Contacts&apos;,
  NOT(OR(ISPICKVAL( TypeOfAssociation__c , &apos;Apex&apos;),
ISPICKVAL( TypeOfAssociation__c , &apos;Bilateral&apos;),
ISPICKVAL( TypeOfAssociation__c , &apos;Sectoral&apos;)))   )</errorConditionFormula>
    <errorMessage>If Record Type is Chamber then Type Of Association field is mandatory</errorMessage>
</ValidationRule>