force-app/main/default/objects/Contact/listViews/Birthdays_this_month.listView-meta.xml
<ListView>
    <fullName>Birthdays_this_month</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Client_Contact_Birthday__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Birthdays this month</label>
</ListView>