force-app/main/default/objects/Contact/listViews/Chamber_contacts.listView-meta.xml
<ListView>
    <fullName>Chamber_contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Chamber_Contacts</value>
    </filters>
    <label>Chamber contacts</label>
</ListView>