force-app/main/default/objects/Contact/listViews/Contacts_created_on_Monthly_basis.listView-meta.xml
<ListView>
    <fullName>Contacts_created_on_Monthly_basis</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Contacts created on Monthly basis</label>
</ListView>