force-app/main/default/objects/Contact/listViews/GT_Employee.listView-meta.xml
<ListView>
    <fullName>GT_Employee</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.GTClientContacts</value>
    </filters>
    <label>GT Employee</label>
</ListView>