force-app/main/default/objects/Contact/listViews/Investors_Private_Equity_Firms_Contact.listView-meta.xml
<ListView>
    <fullName>Investors_Private_Equity_Firms_Contact</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Investor_Contacts</value>
    </filters>
    <label>Investors / Private Equity Firms Contact</label>
</ListView>