force-app/main/default/objects/Contact/listViews/Law_Firm_Contacts.listView-meta.xml
<ListView>
    <fullName>Law_Firm_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ACCOUNT.OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.LawFirmContacts</value>
    </filters>
    <label>Law Firm Contacts</label>
</ListView>