force-app/main/default/objects/Contact/listViews/Pending_with_DS_Team_Investor_Contacts.listView-meta.xml
<ListView>
    <fullName>Pending_with_DS_Team_Investor_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Pick_Record__c</columns>
    <columns>DS_Team_verification_date__c</columns>
    <columns>DS_Team_Approval_Status__c</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Investor_Contacts</value>
    </filters>
    <filters>
        <field>DS_Team_Approval_Rejection_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Pending with DS Team (Investor Contacts)</label>
</ListView>